# MyMavLinkDemo

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mymavlinkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mymavlinkdemo/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mymavlinkdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
heartbeat/: build.gradle.kts
heartbeat/src/: Demo_heart.xml
heartbeat/src/main/c/: CMakeLists.txt  mavlink_types.h
heartbeat/src/main/c/Demo_heart/: Demo_heart.h  mavlink_msg_sysinfo.h  testsuite.h
heartbeat/src/main/cpp/: CMakeLists.txt  SendReceiveMav.cpp  SendReceiveMav.h  checksum.h  mavlink_get_info.h  mavlink_sha256.h  mavlink_types.h  message.hpp  msgmap.hpp  protocol.h
heartbeat/src/main/cpp/Demo_heart/: Demo_heart.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_sysinfo.h  mavlink_msg_sysinfo.hpp  testsuite.h  version.h
heartbeat/src/main/java/: SendMav.java  UdpReceiveThread.java
heartbeat/src/main/java/com/MAVLink/: MAVLinkPacket.java
heartbeat/src/main/java/com/MAVLink/Demo_heart/: CRC.java  msg_sysinfo.java
heartbeat/src/main/java/com/MAVLink/Messages/: MAVLinkMessage.java
heartbeat/src/main/java/com/MAVLink/enums/: SYS_STATE.java
mymavlink/: build.gradle.kts
mymavlink/src/main/: AndroidManifest.xml
mymavlink/src/main/res/values/: strings.xml  themes.xml
mymavlink/src/main/res/values-night/: themes.xml
(+16 files in other folders)
